--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,6 @@
 name: first test hello world
 
-on:
-  - push
+on: [push]
 
 jobs:
   first-job:
@@ -9,5 +8,14 @@ jobs:
     steps:
       - name: Run hello-world
         run: echo "Hello world"
+      
+      - uses: actions/checkout@V2
+      - names: set up python3
+        uses: actions/setup-python@V2
+        with:
+          python-version: [3.8]
+      
+      - name: Run test_reversed
+        run: python3 test_reversed.py
 
 
